--- a/test-output/old/All Test Suite/methods.html
+++ b/test-output/old/All Test Suite/methods.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>All Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9766d">  <td>23/02/23 17:13:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07.test1()[pri:0, instance:team_16.tests.us06.TC_07@4de4b452]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="bea1a6">  <td>23/02/23 17:10:59</td>   <td>-173557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03.test1()[pri:0, instance:team_16.tests.us06.TC_03@2df9b86]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>23/02/23 17:12:27</td>   <td>-85379</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05.test1()[pri:0, instance:team_16.tests.us06.TC_05@15aab8c6]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="66f1f5">  <td>23/02/23 17:11:33</td>   <td>-138911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04.test1()[pri:0, instance:team_16.tests.us06.TC_04@37654521]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="d8a07f">  <td>23/02/23 17:10:28</td>   <td>-203766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02.test1()[pri:0, instance:team_16.tests.us06.TC_02@793be5ca]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>23/02/23 17:10:04</td>   <td>-228031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.test1()[pri:0, instance:team_16.tests.us06.TC_01@10163d6]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>23/02/23 17:13:08</td>   <td>-44199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06.test1()[pri:0, instance:team_16.tests.us06.TC_06@33990a0c]">test1</td> 
-  <td>main@806511723</td>   <td></td> </tr>
+<tr bgcolor="cf94f8">  <td>23/02/25 23:58:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="US_07TC_01.TC01()[pri:0, instance:team_16.tests.us05_us07.US_07TC_01@72cde7cc]">TC01</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="bc9687">  <td>23/02/25 23:57:05</td>   <td>-113445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03.TCO1()[pri:0, instance:team_16.tests.us05_us07.TC_03@1eb5174b]">TCO1</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="bc63a3">  <td>23/02/25 23:55:25</td>   <td>-212968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.testName()[pri:0, instance:team_16.tests.us05_us07.TC_01@7671cb68]">testName</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="9f66ed">  <td>23/02/26 00:01:42</td>   <td>163694</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="US_07TC_02.TC01()[pri:0, instance:team_16.tests.us05_us07.US_07TC_02@5fd4f8f5]">TC01</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="8ac478">  <td>23/02/26 00:05:02</td>   <td>363179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="US_07TC_04.TC01()[pri:0, instance:team_16.tests.us05_us07.US_07TC_04@4e7912d8]">TC01</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="796586">  <td>23/02/26 00:03:45</td>   <td>286073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="US_07TC_03.TC01()[pri:0, instance:team_16.tests.us05_us07.US_07TC_03@696da30b]">TC01</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="89dabe">  <td>23/02/25 23:56:14</td>   <td>-164249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02.testName()[pri:0, instance:team_16.tests.us05_us07.TC_02@79da8dc5]">testName</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
+<tr bgcolor="82b2fa">  <td>23/02/25 23:58:07</td>   <td>-51256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04.TC01()[pri:0, instance:team_16.tests.us05_us07.TC_04@67080771]">TC01</td> 
+  <td>main@1225038340</td>   <td></td> </tr>
 </table>
